--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@directus/sdk": "^20.3.0",
+    "sweetalert2": "^11.26.17",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
