server updated code

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Directus Configuration for Production
-VITE_DIRECTUS_URL=https://your-production-domain.com
+VITE_DIRECTUS_URL=https://admin.westeastfreight.com/
 
 # Customer Role UUID
 VITE_CUSTOMER_ROLE_UUID=replace-with-your-customer-role-uuid
