--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Directus Configuration
-VITE_DIRECTUS_URL=http://0.0.0.0:8055
+VITE_DIRECTUS_URL=https://admin.westeastfreight.com
 
 # Customer Role UUID
 # Get this from Directus Admin -> Settings -> Roles & Permissions -> Customer Role
